Nuking the deprecated junit4runner - Significant cleanup to the mapper table and mapper discovery - Curacao is now compiled with OpenJDK Java 11